# staywake

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: claude-code-hooks.md  config.example.toml  python-context.py  shell-wrap.sh
packaging/: dev.staywake.daemon.plist.template  install.sh
packaging/macos/: install.sh
packaging/windows/: README.md  install.ps1
src/staywake/: __init__.py  api.py  cli.py  config.py  control.py  daemon.py  guard.py  monitors.py  sources.py  state.py
src/staywake/platform/: __init__.py  _fallback.py  _macos.py  _windows.py  base.py
tests/: test_api.py  test_control.py  test_monitors.py  test_sources.py  test_state.py
